--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   <title>drogoLibro</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
+<body bgcolor="#abc5fd">
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
